--- a/main.css
+++ b/main.css
@@ -5,17 +5,8 @@ html, body {
   background-size: cover;
   height: 100%;
 }
-#wrapper {
-  min-height: 100%;
-  position: relative;
-}
-#header {
-  padding: 10px;
-}
-#body {
-  padding: 10px
-  padding-bottom: 30px;
-}
+
+
 .header {
   background-color: #1d2911;
   height: 150px;
@@ -97,6 +88,10 @@ select{
 .bard {
   margin-top:0;
 }*/
+
+.form-control {
+  width: 300px;
+}
 
 .footer {
   background-color: #1d2911;
